--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,35 @@ body {
     text-wrap: balance;
   }
 }
+
+.spinner {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  border-radius: 50%;
+}
+
+.spinner::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 8px solid transparent;
+  border-top-color: #ff007f; /* Starting color */
+  border-right-color: #a03eff; /* Ending color */
+  animation: spin 1s linear infinite;
+  mask-image: radial-gradient(circle, white 60%, transparent 61%);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
